--- a/css/ecommerce-page.css
+++ b/css/ecommerce-page.css
@@ -37,9 +37,16 @@ section {
 }
 
 .header-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo-search {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .logo {
@@ -47,6 +54,7 @@ section {
   font-size: 28px;
   font-weight: 900;
   font-family: "Caveat", sans-serif;
+  padding: 0 100px 0 0;
 }
 
 .search-bar {
@@ -54,6 +62,8 @@ section {
   background: #1f1f27;
   padding: 10px 20px;
   border-radius: 20px;
+  display: flex;
+  flex-direction: row;
 }
 
 .search-bar input {
@@ -71,12 +81,17 @@ section {
 }
 
 .options {
+  display: flex;
+  flex-direction: row;
 }
 
 .option {
   min-width: 60px;
   text-transform: capitalize;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .option i {
@@ -87,6 +102,9 @@ section {
 .categories {
   background-color: #2b2d36;
   padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .category {
@@ -111,6 +129,16 @@ section {
 }
 
 .view-options {
+  display: flex;
+  justify-content: space-between;
+  width: 175px;
+}
+
+.view-option {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
 
 i.fa-th-list {
@@ -120,6 +148,9 @@ i.fa-th-list {
 .section-control {
   padding-bottom: 20px;
   border-bottom: 1px solid #8d8ba5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .section-control .view-option {
@@ -182,6 +213,9 @@ i.fa-th-list {
 /* GRID VIEW STYLES */
 
 .grid.products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .grid .product {
@@ -194,26 +228,43 @@ i.fa-th-list {
 }
 
 .grid .product-data {
-  height: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .grid .product-info {
   text-align: center;
-  padding: 0 20px 30px;
+  padding: 20px 20px 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.grid .product-name {
+  padding: 0 0 25px 0;
 }
 
 .grid .product-action {
   padding-top: 30px;
   border-top: 1px solid #8d8ba5;
+  display: flex;
+  justify-content: center;
 }
 
 /* LINE VIEW STYLES */
 
 .lines.products {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .lines .product {
   padding: 20px;
+  display: flex;
+  gap: 25px;
 }
 
 .lines .product-image-wrapper {
@@ -222,35 +273,63 @@ i.fa-th-list {
 }
 
 .lines .product-data {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-around;
 }
 
 .lines .product-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .lines .product-action {
+  display: flex;
+  flex-direction: row;
 }
 
 /* LINES-ACTION VIEW */
 
 .lines-action.products {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .lines-action .product {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
 }
 
 .lines-action .product-image-wrapper {
   min-width: 300px;
   height: 200px;
+  padding: 20px;
 }
 
 .lines-action .product-data {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
 }
 
 .lines-action .product-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 25px;
 }
 
 .lines-action .product-action {
   border-left: 1px solid #8d8ba5;
-  padding-left: 30px;
   min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
 }
